Added login html

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">heroku1</a>
+            <a class="navbar-brand" href="#/">Heroku1</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
@@ -42,6 +42,7 @@
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
               <li><a ng-href="#/">Contact</a></li>
+              <li><a ng-href="#/login">Login</a></li>
             </ul>
           </div>
         </div>
