--- a/app/index.html
+++ b/app/index.html
@@ -48,14 +48,16 @@
         </div>
       </div>
     </div>
+    
 
     <div class="container">
+    <div ng-class="{ 'alert': flash, 'alert-success': flash.type === 'success', 'alert-danger': flash.type === 'error' }" ng-if="flash" ng-bind="flash.message"></div>    
     <div ng-view=""></div>
     </div>
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+<!--        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>-->
       </div>
     </div>
 
@@ -78,8 +80,13 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/constants.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/services/authentication.service.js"></script>
+        <script src="scripts/services/flash.service.js"></script>
+        <script src="scripts/services/user.service.js"></script>
         <!-- endbuild -->
 </body>
 </html>
