--- a/app/index.html
+++ b/app/index.html
@@ -33,16 +33,13 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">Heroku1</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
-              <li><a ng-href="#/login">Login</a></li>
+              <li><a ng-href="#/login">{{login_text}}</a></li>  
+              <li><a href="#/mail">Mail</a></li>
             </ul>
           </div>
         </div>
@@ -84,6 +81,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/controllers/mail.js"></script>
         <script src="scripts/services/authentication.service.js"></script>
         <script src="scripts/services/flash.service.js"></script>
         <script src="scripts/services/user.service.js"></script>
