--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
+              <div><img src="images/q3-logo.svg" style="height:30px;" /></div>  
             <ul class="nav navbar-nav">
               <li><a ng-href="#/login">{{login_text}}</a></li>  
               <li><a href="#/mail">Mail</a></li>
