--- a/app/index.html
+++ b/app/index.html
@@ -9,10 +9,8 @@
     <!-- build:css({.tmp,app}) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="components/ng-dialog/css/ngDialog.min.css" />
     <link rel="stylesheet" href="components/ng-dialog/css/ngDialog.css" />
     <link rel="stylesheet" href="components/ng-dialog/css/ngDialog-theme-default.css" />
-    <link rel="stylesheet" href="components/ng-dialog/css/ngDialog-theme-plain.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -82,8 +80,8 @@
     <script src="components/angular-route/angular-route.js"></script>
     <script src="components/angular-sanitize/angular-sanitize.js"></script>
     <script src="components/angular-touch/angular-touch.js"></script>
-    <script src="components/ng-dialog/js/ngDialog.min.js"></script>
-    <script src="components/ng-dialog/js/ngDialog.min.js"></script>
+    <script src="components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="components/ng-dialog/js/ngDialog.js"></script>
     <script src="components/angularUtils-pagination/dirPagination.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
